--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "axios": "^1.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.3"
   },
